--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,52 @@
-theme: jekyll-theme-midnight
+# Site settings
+title: UkokuGemini's Blog
+SEOTitle: UkokuGemini's Blog | UkokuGemini's Blog
+header-img: img/WebSite/BG.jpg
+email: Ukoku@live.cn
+description: "UkokuGemini Just UkokuGemini."
+keyword: "UkokuGemini"
+url: "http://UkokuGemini.github.io"          
+baseurl: ""    
+github_repo: "https://github.com/UkokuGemini/UkokuGemini.github.io.git" 
+
+# Sidebar settings
+sidebar: true                           # whether or not using Sidebar.
+sidebar-about-description: "UkokuGemini Just UkokuGemini."
+sidebar-avatar: /img/WebSite/Mine.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+
+# SNS settings
+RSS: false
+github_username:    UkokuGemini
+
+# Build settings
+# from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
+permalink: pretty
+paginate: 5
+exclude: ["node_modules","README.md"]
+
+# Markdown settings
+# replace redcarpet to kramdown,
+# although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
+# document: http://jekyllrb.com/docs/configuration/#kramdown
+markdown: kramdown
+highlighter: rouge
+kramdown:
+  input: GFM                            # use Github Flavored Markdown !important
+
+
+# Friends
+friends: [
+    {
+        title: "sunshineyg",
+        pic: "https://avatars.githubusercontent.com/u/58005045?v=4",
+        href: "https://github.com/sunshineyg"
+    },{
+        title: "404",
+        pic: "/img/Icon/404.png",
+        href: "https://ukokugemini.github.io/404"
+    },{
+        title: "Offline",
+        pic: "/img/Icon/Offline.png",
+        href: "https://ukokugemini.github.io/offline"
+    }
+]
